force-app/main/default/objects/Work_Assignment__c/fields/Task_Number__c.field-meta.xml
<CustomField>
    <fullName>Task_Number__c</fullName>
    <description>Task Number</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Task Number</inlineHelpText>
    <label>Task Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>