force-app/main/default/objects/Work_Assignment__c/fields/Total_Amount_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Payments__c</fullName>
    <description>Total Amount of Payments</description>
    <inlineHelpText>Total Amount of Payments</inlineHelpText>
    <label>Total Amount of Payments</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>