force-app/main/default/objects/Work_Assignment__c/fields/Warehouse_and_dont_allocate_to_Agency__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_and_dont_allocate_to_Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Warehouse and don&apos;t allocate to Agency - for complaint</description>
    <inlineHelpText>Warehouse and don&apos;t allocate to Agency</inlineHelpText>
    <label>Warehouse and don&apos;t allocate to Agency</label>
    <type>Checkbox</type>
</CustomField>