force-app/main/default/objects/Work_Assignment__c/fields/Work_Assignment_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Work_Assignment_External_Id__c</fullName>
    <description>Work Assignment External ID</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Work Assignment External ID</inlineHelpText>
    <label>Work Assignment External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>