force-app/main/default/objects/Work_Assignment__c/fields/Write_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Date__c</fullName>
    <description>Write Off Date</description>
    <formula>&apos;&apos;</formula>
    <inlineHelpText>Write Off Date</inlineHelpText>
    <label>Write Off Date</label>
    <type>Text</type>
</CustomField>