force-app/main/default/objects/Work_Assignment__c/recordTypes/Agency.recordType-meta.xml
<RecordType>
    <fullName>Agency</fullName>
    <active>true</active>
    <description>Agency Work Assignment</description>
    <label>Agency Work Assignment</label>
</RecordType>