force-app/main/default/objects/Work_Assignment__c/recordTypes/Agency_Complaint.recordType-meta.xml
<RecordType>
    <fullName>Agency_Complaint</fullName>
    <active>true</active>
    <description>Agency Complaint</description>
    <label>Agency Complaint</label>
</RecordType>