force-app/main/default/objects/Work_Assignment__c/recordTypes/Agency_Excel_Processing.recordType-meta.xml
<RecordType>
    <fullName>Agency_Excel_Processing</fullName>
    <active>true</active>
    <description>Agency Excel Processing</description>
    <label>Agency Excel Processing</label>
</RecordType>