force-app/main/default/objects/Work_Assignment__c/recordTypes/Agency_Media.recordType-meta.xml
<RecordType>
    <fullName>Agency_Media</fullName>
    <active>true</active>
    <description>Agency Media</description>
    <label>Agency Media</label>
</RecordType>