force-app/main/default/objects/Work_Assignment__c/recordTypes/Bulk_Media_Request.recordType-meta.xml
<RecordType>
    <fullName>Bulk_Media_Request</fullName>
    <active>true</active>
    <description>CFG Excel Processing</description>
    <label>CFG Excel Processing</label>
</RecordType>