force-app/main/default/objects/Work_Assignment__c/recordTypes/CFG.recordType-meta.xml
<RecordType>
    <fullName>CFG</fullName>
    <active>true</active>
    <description>CFG Work Assignment</description>
    <label>CFG Work Assignment</label>
</RecordType>