force-app/main/default/objects/Work_Assignment__c/recordTypes/CFG_Complaint.recordType-meta.xml
<RecordType>
    <fullName>CFG_Complaint</fullName>
    <active>true</active>
    <description>CFG Complaint</description>
    <label>CFG Complaint</label>
</RecordType>