force-app/main/default/objects/Work_Assignment__c/recordTypes/CFG_Excel_Processing.recordType-meta.xml
<RecordType>
    <fullName>CFG_Excel_Processing</fullName>
    <active>true</active>
    <description>CFG Excel Processing</description>
    <label>CFG Excel Processing</label>
</RecordType>