force-app/main/default/objects/Work_Assignment__c/recordTypes/CFG_Media.recordType-meta.xml
<RecordType>
    <fullName>CFG_Media</fullName>
    <active>true</active>
    <description>CFG Media</description>
    <label>CFG Media</label>
</RecordType>