force-app/main/default/objects/Work_Assignment__c/recordTypes/Credit_Bureau_Reporting_Files.recordType-meta.xml
<RecordType>
    <fullName>Credit_Bureau_Reporting_Files</fullName>
    <active>true</active>
    <label>Credit Bureau Reporting Files</label>
</RecordType>