force-app/main/default/objects/Work_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Description__c</columns>
    <columns>Placement_Agency__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Sub_Purpose__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>