force-app/main/default/objects/Work_Assignment__c/listViews/All_Created_Today.listView-meta.xml
<ListView>
    <fullName>All_Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Task_Number__c</columns>
    <columns>Title__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Purpose__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Work Assignment Created Today</label>
    <sharedTo>
        <group>ICT_Group</group>
        <group>LRT_Group</group>
    </sharedTo>
</ListView>