force-app/main/default/objects/Work_Assignment__c/listViews/All_Direct_Payment_File.listView-meta.xml
<ListView>
    <fullName>All_Direct_Payment_File</fullName>
    <columns>NAME</columns>
    <columns>Task_Number__c</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Purpose__c</columns>
    <columns>Sub_Purpose__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Product__c</columns>
    <columns>Placement_Agency_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Purpose__c</field>
        <operation>equals</operation>
        <value>Excel File Processing</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Work_Assignment__c.Agency_Excel_Processing,Work_Assignment__c.CFG_Excel_Processing</value>
    </filters>
    <filters>
        <field>Sub_Purpose__c</field>
        <operation>equals</operation>
        <value>Direct Payment Upload File</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>All Direct Payment File</label>
    <sharedTo>
        <group>ICT_Group</group>
        <group>LRT_Group</group>
    </sharedTo>
</ListView>