force-app/main/default/objects/Work_Assignment__c/listViews/All_Excel_Processing.listView-meta.xml
<ListView>
    <fullName>All_Excel_Processing</fullName>
    <columns>NAME</columns>
    <columns>Task_Number__c</columns>
    <columns>Work_Assignment_External_Id__c</columns>
    <columns>Title__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Purpose__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Product__c</columns>
    <columns>Placement_Agency__c</columns>
    <columns>Placement_Agency_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Purpose__c</field>
        <operation>equals</operation>
        <value>Excel File Processing</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Work_Assignment__c.Agency_Excel_Processing,Work_Assignment__c.CFG_Excel_Processing</value>
    </filters>
    <label>All Excel Processing</label>
    <sharedTo>
        <group>ICT_Group</group>
        <group>LRT_Group</group>
    </sharedTo>
</ListView>