force-app/main/default/objects/Work_Assignment__c/listViews/All_Media_Requests_Created_Today.listView-meta.xml
<ListView>
    <fullName>All_Media_Requests_Created_Today</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Task_Number__c</columns>
    <columns>Title__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Assigned_To_User_Name__c</columns>
    <columns>Assign_To__c</columns>
    <columns>Purpose__c</columns>
    <columns>Sub_Purpose__c</columns>
    <columns>Product__c</columns>
    <columns>Placement_Agency__c</columns>
    <columns>Placement_Agency_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Purpose__c</field>
        <operation>equals</operation>
        <value>Media Request</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Media Requests - Created Today</label>
    <sharedTo>
        <group>ICT_Group</group>
        <group>LRT_Group</group>
    </sharedTo>
</ListView>