force-app/main/default/objects/Work_Assignment__c/listViews/All_Payments_Created_Today.listView-meta.xml
<ListView>
    <fullName>All_Payments_Created_Today</fullName>
    <booleanFilter>( 1 OR 3) AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Task_Number__c</columns>
    <columns>Sub_Purpose__c</columns>
    <columns>Title__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Assign_To__c</columns>
    <columns>Priority__c</columns>
    <columns>Product__c</columns>
    <columns>Placement_Agency__c</columns>
    <columns>Placement_Agency_Name__c</columns>
    <columns>Created_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Purpose__c</field>
        <operation>equals</operation>
        <value>Payment</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Sub_Purpose__c</field>
        <operation>equals</operation>
        <value>Product Payment Upload File</value>
    </filters>
    <label>All Payments  - Created Today</label>
    <sharedTo>
        <group>ICT_Group</group>
        <group>LRT_Group</group>
    </sharedTo>
</ListView>