force-app/main/default/objects/Work_Assignment__c/listViews/All_Queries.listView-meta.xml
<ListView>
    <fullName>All_Queries</fullName>
    <columns>NAME</columns>
    <columns>Task_Number__c</columns>
    <columns>Product__c</columns>
    <columns>Customer__c</columns>
    <columns>Title__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Purpose__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Placement_Agency__c</columns>
    <columns>Placement_Agency_Name__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Purpose__c</field>
        <operation>equals</operation>
        <value>Query</value>
    </filters>
    <label>All Queries</label>
    <sharedTo>
        <group>ICT_Group</group>
        <group>LRT_Group</group>
    </sharedTo>
</ListView>